--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
 		"@fortawesome/free-solid-svg-icons": "^5.10.2",
 		"@fortawesome/react-fontawesome": "^0.1.4",
 		"bootstrap": "^4.3.1",
-		"jquery": "^3.4.1",
+		"jquery": "^3.5.1",
 		"moment": "^2.24.0",
-		"node-sass": "^4.12.0",
+		"node-sass": "^4.14.1",
 		"popper.js": "^1.15.0",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
 		"react-ga": "^2.6.0",
-		"react-scripts": "3.1.2",
-		"react-table": "^7.0.0-beta.0"
+		"react-scripts": "^3.4.3",
+		"react-table": "7.0.0-beta.0"
 	},
 	"devDependencies": {
 		"eslint": "^6.4.0",
