update title version

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "NCUCF",
-	"name": "NCU Course Finder",
+	"short_name": "NCUCFv4",
+	"name": "NCU Course Finder v4",
 	"icons": [
 		{
 			"src": "favicon.ico",
